eZ publish changelog:
---------------------

Changes from 2.2 Beta 1 to 2.2 Beta 2
-----------------------------------
* Added sections to eZ trade
* Added a better VAT system i eZ trade
* Added voucher view
* Added order list/view for customers
* Added a more complete cart and checkout
* Added SQL admin in sitemanager
* Added fulltext search in eZ forum
* Fixed search on keywords in article
* Added basic editor for templates in admin.
* Added customer list and customer details in eZ trade.
* Added support for multiple keywords in url translator.
* Added section support with Sitedesign, Template and Language override.
* Fixed problems with articles being stored with invalid XML
* Added topic link from article list and article view
* Added modification sorting on article categories.
* Added image caption override tag
* Added better search in eZ article. Now handles stop words and word freqyency.
* Fixed problems with searching in eZ filemanager
* Added setting to set if a user can see the calendar of every user
* Added setting to mage consultations visible for everyone
* Added posibility to add an appointment for an entire day in the calendar
* Added setting to make consultations visible for everyone
* Added upload permission setting to eZ filemanager folders and eZ imagecatalogue categories.
* Added buttons for buy and file folder in person/company list

Changes from 2.2 Alpha to 2.2 Beta 1
-----------------------------------
* Added display of which articles/products an image is used in
* Added mime types for known office documents in filemanger
* Added copy of article categories in admin
* Added topic list on user site
* Added search in eZ imagecatalogue
* Added support for IP or Cookie based vote checking in eZ poll
* Added support for custom defined article tags in site.ini
* Added XML generator/renderer support in eZ trade
* Added circular categories in eZ article
* Added option for keeping case of manual keywords for eZ article