@@ -1,6 +1,10 @@
 eZ publish changelog:
 ---------------------
 
+Changes from 2.2 Beta 2 to 2.2 Pre
+-----------------------------------
+* Search in contact now searches in online addresses and phone numbers
+
 Changes from 2.2 Beta 1 to 2.2 Beta 2
 -----------------------------------
 * Added sections to eZ trade
